<resources>
    <string name="app_name">ViecTimNguoiApp</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="textview_title_username_header_menu">username</string>
    <string name="textview_name_app_footer_menu">Việc tìm người - Người tìm việc</string>
    <string name="textview.text.work">Người tìm việc</string>
    <string name="textview.text.hider">Nhà tuyển dụng</string>
    <string name="img_contact_detail_description">image back</string>
    <string name="facebook_app_id">1284834688271138</string>
    <string name="img_close_detail_new">icon close</string>
    <string name="button_contact_detail_new">Book</string>
    <string name="textview_title_user_hider">Người đăng bài</string>
    <string name="textview_text_login">Đăng Nhập</string>
    <string name="textview_login_username">Tên tài khoản</string>
    <string name="textview_password">Mật khẩu (ít nhất 8 kí tự)</string>
    <string name="btn_login">Đăng Nhập</string>
    <string name="btn_login_fb_text">Đăng Nhập Bằng Facebook</string>
    <string name="textview_login_fb">Login Using Facebook Account</string>
    <string name="title_name_app">VIỆC TÌM NGƯỜI</string>
    <string name="btn_register">Đăng Ký</string>
    <string name="btn_text_login">Login</string>
    <string name="textview_retype_password">Confirm Password</string>
    <string name="textview_role_register">You are</string>
    <string name="edt_hint_mesage_area">Aa</string>
    <string name="textview_name_app">Việc Tìm Người</string>
    <string name="textview_btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="textview_user_infor">User Information</string>
    <string name="textview_text_forget_password">Quên mật khẩu ?</string>
    <string name="textview_text_or">OR</string>
    <string name="textview_text_setting">Cài đặt</string>
    <string name="textview_tex_choice_job">Chọn loại công việc</string>
    <string name="chk_text_fix_electronic">Sửa chữa điện trong nhà</string>
    <string name="chk_clean_house">Lau nhà</string>
    <string name="textview_text_do_laundry">Giặt quần áo</string>
    <string name="textview_text_paint_house">Dọn dẹp nhà cửa</string>
    <string name="textview_text_choice_address">Chọn địa điểm</string>
    <string name="chk_text_hai_chau">Hải Châu</string>
    <string name="chk_text_cam_le">Cẩm Lệ</string>
    <string name="chk_text_lien_chieu">Liên Chiểu</string>
    <string name="chk_text_thanh_khe">Thanh Khê</string>
    <string name="chk_text_son_tra">Sơn Trà</string>
    <string name="chk_text_ngu_hanh_son">Ngũ Hành Sơn</string>
    <string name="chk_text_hoa_vang">Hòa Vang</string>
    <string name="btn_text_save">Lưu</string>
    <string name="textview_text_fix_water_pipe">Sửa ống nước</string>
    <string name="textview.text.title.create.new">Tạo bài đăng việc làm</string>
    <string name="textview.text.job">Công việc</string>
    <string name="textview.text.note">Ghi chú</string>
    <string name="textview.text.address">Địa chỉ</string>
    <string name="btn.post">Đăng Bài</string>
    <string name="textview.text.deadline">Ngày hết hạn</string>
    <string name="edt.text.provice">Đà Nẵng</string>
    <string name="textview_text.title.dialog.price">Báo giá</string>
    <string name="textview.text.message.price">Vui lòng nhập báo giá</string>
    <string name="textview.text.contact">Liên Hệ</string>
    <string name="textview.text.point">Điểm tích lũy</string>

    <array name="name_category">
        <item>Sửa điện trong nhà</item>
        <item>Lau nhà</item>
        <item>Giặt quần áo</item>
        <item>Sửa ống nước</item>
        <item>Dọn dẹp nhà cửa</item>
        <item>Ủi quần áo</item>
    </array>
    <array name="name_district">
        <item>Hải Châu</item>
        <item>Cẩm Lệ</item>
        <item>Thanh Khê</item>
        <item>Sơn Trà</item>
        <item>Ngũ Hành Sơn</item>
        <item>Hoà Vang</item>
        <item>Liên Chiểu</item>
    </array>
    <string name="package_map">com.google.android.apps.maps</string>
    <string name="message_not_found_address">Không tìm được địa chỉ</string>
    <string name="message_no_service_provider_available">Không có dịch vụ gps</string>
    <string name="title_GPS_Not_Enabled">Dịch vụ GPS không khả dụng</string>
    <string name="message_Do_you_wants_to_turn_On_GPS">Vui lòng bật GPS</string>
    <string name="message_Yes">Ok</string>
    <string name="message_No">Đóng</string>
    <string name="dialog_messenger_connect">Đang xử lý...</string>
    <string name="toast_text_connection_internet">Vui lòng kiểm tra kết nối mạng</string>
    <string name="activity_login.button.text.google">Google</string>
    <string name="activity_login.button.text.facebook">Facebook</string>
    <string name="textview_text_iron_the_clothes">Ủi quần áo</string>

    <string name="child_notify_report">notifyReport</string>
    <string name="child_user">users</string>
</resources>
