<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:id="@+id/progressBarSave"
            />
        <RelativeLayout
            android:id="@+id/llJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvJob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="Công việc"
                android:textColor="#4CAF50"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgDownJob"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_down" />

            <ImageView
                android:id="@+id/imgUpJob"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_up"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlChoiceJob"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llJob"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn_contact">

            <CheckBox
                android:id="@+id/chkFixElectronicInHouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvChoiceSomeJob"
                android:layout_marginLeft="@dimen/ll_login_margin"
                android:layout_marginTop="20dp"
                android:text="@string/chk_text_fix_electronic" />

            <CheckBox
                android:id="@+id/chkCleanHouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chkFixElectronicInHouse"
                android:layout_marginLeft="@dimen/ll_login_margin"
                android:layout_marginTop="@dimen/textview_text_setting_margin_top"
                android:text="@string/chk_clean_house" />

            <CheckBox
                android:id="@+id/chkDoLaundry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chkCleanHouse"
                android:layout_marginLeft="@dimen/ll_login_margin"
                android:layout_marginTop="@dimen/textview_text_setting_margin_top"
                android:text="@string/textview_text_do_laundry" />

            <CheckBox
                android:id="@+id/chkFixWaterPipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chkDoLaundry"
                android:layout_marginLeft="@dimen/ll_login_margin"
                android:layout_marginTop="@dimen/textview_text_setting_margin_top"
                android:text="@string/textview_text_fix_water_pipe" />

            <CheckBox
                android:id="@+id/chkPaintHouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chkFixWaterPipe"
                android:layout_marginLeft="@dimen/ll_login_margin"
                android:layout_marginTop="@dimen/textview_text_setting_margin_top"
                android:text="@string/textview_text_paint_house" />

            <CheckBox
                android:id="@+id/chkIronTheClothes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chkPaintHouse"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="@dimen/ll_login_margin"
                android:layout_marginTop="@dimen/textview_text_setting_margin_top"
                android:text="@string/textview_text_iron_the_clothes" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/llAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlChoiceJob"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="Địa điểm"
                android:textColor="#4CAF50"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgDownAddress"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_down" />

            <ImageView
                android:id="@+id/imgUpAddress"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_up"
                android:visibility="gone" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/llChoiceAddress"
            android:visibility="gone"
            android:layout_below="@+id/llAddress"
            android:background="@drawable/bg_btn_contact"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ll_login_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/chkHaiChau"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvChoiceSomeAddress"
                    android:layout_marginTop="@dimen/textview_text_setting_margin_top"
                    android:text="@string/chk_text_hai_chau" />

                <CheckBox
                    android:id="@+id/chkCamLe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/textview_text_setting_margin_top"
                    android:text="@string/chk_text_cam_le" />

                <CheckBox
                    android:id="@+id/chkLienChieu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/textview_text_setting_margin_top"
                    android:text="@string/chk_text_lien_chieu" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/chkThanhKhe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/textview_text_setting_margin_top"
                    android:text="@string/chk_text_thanh_khe" />

                <CheckBox
                    android:id="@+id/chkSonTra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/textview_text_setting_margin_top"
                    android:text="@string/chk_text_son_tra" />

                <CheckBox
                    android:id="@+id/chkNguHanhSon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/textview_text_setting_margin_top"
                    android:text="@string/chk_text_ngu_hanh_son" />

                <CheckBox
                    android:id="@+id/chkHoaVang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/textview_text_setting_margin_top"
                    android:layout_marginBottom="10dp"
                    android:text="@string/chk_text_hoa_vang" />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/llNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llChoiceAddress"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="Nhận thông báo"
                android:textColor="#4CAF50"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/swNotification"
                android:padding="10dp"
                />
        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llNotification"
            android:text="Lưu"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:background="#4CAF50"
            android:id="@+id/btnSave"
            />
    </RelativeLayout>
</ScrollView>

