<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/ll_login_margin"
        android:layout_marginRight="@dimen/ll_login_margin"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/rl_login_header_height"
            android:layout_marginTop="@dimen/rl_login_header_margin_top">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/img_back_header_login"
                android:layout_height="@dimen/img_back_header_login"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/textview_text_login"
                android:textColor="@color/textview.text.title.login"
                android:textSize="@dimen/textview_text_login_size"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textview_text_username_margin_top"
            android:text="@string/textview_login_username"
            android:textColor="@color/textview_login" />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edt_username_margin_top"
            android:background="@drawable/bg_message"
            android:padding="@dimen/edt_username_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textview_text_password_margin_top"
            android:text="@string/textview_password"
            android:textColor="@color/textview_login" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edt_password_margin_top"
            android:background="@drawable/bg_message"
            android:inputType="textPassword"
            android:padding="@dimen/edt_password_padding" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/View_login_height"
            android:layout_marginTop="@dimen/View_login_margin_top"
            android:background="@drawable/bg_gradient" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/btn_login_width"
            android:layout_height="@dimen/btn_login_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/btn_login_margin_top"
            android:background="@drawable/bg_btn_contact"
            android:text="@string/btn_login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_login_text" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/tvLoginFaceBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/textview_login_fb_margin_top"
                android:layout_marginBottom="@dimen/textview_login_fb_margin_bottom"
                android:text="@string/textview_login_fb"
                android:textColor="@color/textview.text.title.login" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>